--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World! Site Title</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Волк - голодный, одинокий
+Заяц - пугливый
+Лиса - хитрый</h1>
   </body>
 </html>
