--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Hello World! Site Title</title>
   </head>
   <body>
-    <h1>Волк - голодный, одинокий
-Заяц - пугливый
-Лиса - хитрый</h1>
+    <div class="russian">
+      <h1>Волк - голодный, одинокий<br>Заяц - пугливый<br>Лиса - хитрый</h1>
+    </div>
+    <div class="others">
+      <h1>Заяц - пугливый | быстрый</h1>
   </body>
 </html>
