--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <div class="russian">
-      <h1>Волк - голодный, одинокий<br>Заяц - пугливый<br>Лиса - хитрый</h1>
+      <h1>Волк - голодный, одинокий</h1>
+      <h1>Заяц - пугливый</h1>
+      <h1>Лиса - хитрый</h1>
     </div>
     <div class="others">
       <h1>Заяц - пугливый | быстрый</h1>
