--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       <h1>Волк - голодный, одинокий</h1>
       <h1>Заяц - пугливый</h1>
       <h1>Лиса - хитрый</h1>
+      <h1>Свинья - грязный</h1>
+      <h1>Курица - безалаберный</h1>
     </div>
     <div class="others">
       <h1>Заяц - пугливый | быстрый</h1>
