--- a/index.html
+++ b/index.html
@@ -7,13 +7,34 @@
   </head>
   <body>
     <div class="russian">
-      <h1>Волк - голодный, одинокий</h1>
-      <h1>Заяц - пугливый</h1>
+      <h1>Волк - голодный, одинокий, свирепый</h1>
+      <h1>Заяц - трусливый</h1>
       <h1>Лиса - хитрый</h1>
       <h1>Свинья - грязный</h1>
       <h1>Курица - безалаберный</h1>
+      <h1>Собака - презренный, грубый, сварливый</h1>
+      <h1>Осел - упрямый, глупый</h1>
+      <h1>Лев - сильный</h1>
+      <h1>Обезьяна - некрасивый</h1>
+      <h1>Медведь - неуклюжий, неловкий</h1>
+      <h1>Крыса - подлый</h1>
+      <h1>Сова - опытный</h1>
+      <h1>Змея - коварный</h1>
+      <h1>Петух - крикливо одетый человек, хвастун, скандалист</h1>
+      <h1>Кабан - крупный, грязный</h1>
+      <h1>Орел - блестящий, талантливый</h1>
+      <h1>Бык - сильный, крепкий</h1>
+      <h1>Индюк - чересчур важный, напыщенный</h1>
+      <h1>Козел - дурак</h1>
+      <h1>Теленок - молодой, неопытный, бесхарактерный</h1>
     </div>
     <div class="others">
       <h1>Заяц - пугливый | быстрый</h1>
+      <h1>Медведь - крупный | крупный, грубый</h1>
+      <h1>Волк - отважный, свободный | ненасытный, жестокий</h1>
+      <h1>Корова - крупная, удивленный, неуклюжая | крупная, неуклюжая, неповоротливая</h1>
+      <h1>Баран - глупый | безвольный, застенчивый</h1>
+      <h1>Кошка - хитрый | приятель(мужчине), сварливая, гулящая(женщине)</h1>
+      <h1>Тигр - смелый | быстрый</h1>
   </body>
 </html>
