--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
       <h1>Индюк - чересчур важный, напыщенный</h1>
       <h1>Козел - дурак</h1>
       <h1>Теленок - молодой, неопытный, бесхарактерный</h1>
+      <h1>Соловей - человек с красивым голосом</h1>
+      <h1>Попугай - повторять чужие слова</h1>
+      <h1>Рыба - вялый, холодный</h1>
+      <h1>Ёрш - неуступчивый, задорный</h1>
+      <h1>Осетр - важная персона</h1>
+      <h1>Крокодил - жестокий, бессердечный</h1>
+      <h1>Черепаха - медлительный, нерасторопный</h1>
+      <h1>Гадюка - злой, язвительной женщине</h1>
+      <h1>Каракатица - неуклюжий, коротконогий</h1>
+      <h1>Пиявка - жадный, жестокий</h1>
+      <h1>Червяк - жалкий, ничтожный</h1>
+      <h1>Паук - вымагающий, жестокий</h1>
+      <h1>Скорпион - злобный, ядовитый</h1>
+      <h1>Динозавр - человек с устаревшими взглядами</h1>
     </div>
     <div class="others">
       <h1>Заяц - пугливый | быстрый</h1>
