--- a/index.html
+++ b/index.html
@@ -3,52 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World! Site Title</title>
+    <title>Nurlan Porfolio</title>
   </head>
   <body>
-    <div class="russian">
-      <h1>Волк - голодный, одинокий, свирепый</h1>
-      <h1>Заяц - трусливый</h1>
-      <h1>Лиса - хитрый</h1>
-      <h1>Свинья - грязный</h1>
-      <h1>Курица - безалаберный</h1>
-      <h1>Собака - презренный, грубый, сварливый</h1>
-      <h1>Осел - упрямый, глупый</h1>
-      <h1>Лев - сильный</h1>
-      <h1>Обезьяна - некрасивый</h1>
-      <h1>Медведь - неуклюжий, неловкий</h1>
-      <h1>Крыса - подлый</h1>
-      <h1>Сова - опытный</h1>
-      <h1>Змея - коварный</h1>
-      <h1>Петух - крикливо одетый человек, хвастун, скандалист</h1>
-      <h1>Кабан - крупный, грязный</h1>
-      <h1>Орел - блестящий, талантливый</h1>
-      <h1>Бык - сильный, крепкий</h1>
-      <h1>Индюк - чересчур важный, напыщенный</h1>
-      <h1>Козел - дурак</h1>
-      <h1>Теленок - молодой, неопытный, бесхарактерный</h1>
-      <h1>Соловей - человек с красивым голосом</h1>
-      <h1>Попугай - повторять чужие слова</h1>
-      <h1>Рыба - вялый, холодный</h1>
-      <h1>Ёрш - неуступчивый, задорный</h1>
-      <h1>Осетр - важная персона</h1>
-      <h1>Крокодил - жестокий, бессердечный</h1>
-      <h1>Черепаха - медлительный, нерасторопный</h1>
-      <h1>Гадюка - злой, язвительной женщине</h1>
-      <h1>Каракатица - неуклюжий, коротконогий</h1>
-      <h1>Пиявка - жадный, жестокий</h1>
-      <h1>Червяк - жалкий, ничтожный</h1>
-      <h1>Паук - вымагающий, жестокий</h1>
-      <h1>Скорпион - злобный, ядовитый</h1>
-      <h1>Динозавр - человек с устаревшими взглядами</h1>
-    </div>
-    <div class="others">
-      <h1>Заяц - пугливый | быстрый</h1>
-      <h1>Медведь - крупный | крупный, грубый</h1>
-      <h1>Волк - отважный, свободный | ненасытный, жестокий</h1>
-      <h1>Корова - крупная, удивленный, неуклюжая | крупная, неуклюжая, неповоротливая</h1>
-      <h1>Баран - глупый | безвольный, застенчивый</h1>
-      <h1>Кошка - хитрый | приятель(мужчине), сварливая, гулящая(женщине)</h1>
-      <h1>Тигр - смелый | быстрый</h1>
+    <h1>Nurlan Abzalbekov, Data Scientist</h1>
   </body>
 </html>
