--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <title>Nurlan Porfolio</title>
   </head>
   <body>
-    <h1>Nurlan Abzalbekov, Data Scientist</h1>
+    Абзалбеков Нурлан Багдатович
+
+Дата рождения: 09.08.2002
+Город: Караганда                                                                                                                                                                                           Моб. телефон: +7 (708) 109 5678
+E-mail: nurlan2002@list.ru
+
+
+Образование: 
+2020-2023г. Astana IT University
+Факультет: Информационные системы
+Специальность: Big Data
+Форма обучения: Очная
+Профессиональные достижения:
+- Распознование текста с помощью библиотек OpenCV, Tesseract;
+- Подготовка, предсказание, классификация больших данных(числовых, категориальных);
+- Разработка телеграмм-бота;
+- Разработка приложения для путешествий;
+- Сайт баскетбольной секции.
+Профессиональные навыки:
+- Знание алгоритмов машинного обучения: Регрессия, KNN, KMeans, Дерево решений, Случайный лес;
+- Знание построения бизнес процессов;
+- Знание библиотек получения данных, подготовки данных, дата аналитики: BeautifulSoup, Numpy, Pandas, Skikit-learn, Scipy, Tesseract, OpenCV;
+- Знание обращения с типами файлов: Excel, CSV, SQL, JSON, HTML, XML;
+- Знание языков программирования: Python, Java, C++, React native;
+- Знание языков веб-программирования: HTML, CSS, фреймворк Bootstrap, JavaScript;
+- Знание баз данных: PostgreSQL, Oracle SQL + Pl/SQL;
+- Владение языками: казахский(носитель), русский(свободно), английский (intermediate).
+Личные качества:
+трудолюбие, исполнительность, стрессоустойчивость, инициативность, умение работать в команде, эмоциональная устойчивость, желание работать и развиваться, умение работать с большим объёмом информации, аналитический склад ума, склонность к самообучению.
+
   </body>
 </html>
