--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nurlan Porfolio</title>
+    <title>Article</title>
   </head>
   <body>
     The Relationship between Anger and Happiness: An Experience Sampling Study
